--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,14 @@
   <modules>
     <module>dispatcher</module>
     <module>common-rabbitmq</module>
+    <module>nodee</module>
   </modules>
+
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <telegrambot.starter.version>6.1.0</telegrambot.starter.version>
+  </properties>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
